--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.idea/*
+.idea
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
